fixed carousel mobile size info icon overlaps with right arrow

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -25,3 +25,10 @@
   text-align:right;  
   list-style:none;
 }
+
+@media(max-width:600px){
+  .test_link{
+   
+    margin: 5px 30px;
+  }
+}
