--- a/src/route/Portfolio/Portfolio.css
+++ b/src/route/Portfolio/Portfolio.css
@@ -12,7 +12,7 @@
 
 @media (max-width:600px){
   .carousel_container{  
-    margin: 40px 20px;
+    margin: 40px 5px;
   } 
   .portfolio_Container{
     height:45vh;
